# YoutubeForecastMaker

./: .gitignore  .licenserc.yaml  LICENSE.txt  Makefile  README.md  config.yaml  cookiecutter.json  credentials-example.yaml  prompts.yml  pull_data.ipynb  pull_video_data.py  query_youtube.py  rebuild_pipeline.sh  requirements.txt
.github/: pull_request_template.md
.github/workflows/: lint.yml
WeatherForecastic/: .gitignore  pyproject.toml  requirements.txt
WeatherForecastic/conf/base/: catalog.yml  parameters.yml
WeatherForecastic/include/WeatherForecastic/app/: app.py
WeatherForecastic/notebooks/: data_pull.ipynb  launch_app.ipynb
WeatherForecastic/src/WeatherForecastic/: pipeline_registry.py
WeatherForecastic/src/WeatherForecastic/pipelines/deploy_forecast/: nodes.py
WeatherForecastic/src/WeatherForecastic/pipelines/deploy_streamlit_app/: nodes.py  pipeline.py
WeatherForecastic/src/WeatherForecastic/pipelines/preprocessing/: nodes.py  pipeline.py
WeatherForecastic/src/WeatherForecastic/pipelines/setup/: nodes.py  pipeline.py
YoutubeForecastMaker/conf/base/: parameters.yml
YoutubeForecastMaker/notebooks/: data_pull_test.ipynb
YoutubeForecastMaker/src/YoutubeForecastMaker/: settings.py
hooks/: post_gen_project.py  pre_prompt.py
recipe-weather-forecastic/: .gitignore  pyproject.toml  requirements.txt
recipe-weather-forecastic/conf/: logging.yml
recipe-weather-forecastic/conf/base/: catalog.yml  catalog_assets.yml  catalog_setup.yml  catalog_streamlit.yml  example-globals.yml  parameters.yml  parameters_deploy_forecast.yml  parameters_setup.yml  parameters_streamlit.yml
recipe-weather-forecastic/conf/local/: example-credentials.yml
recipe-weather-forecastic/include/WeatherForecastic/app/: style.css
recipe-weather-forecastic/include/recipe_weather_forecastic/app/: .datarobotignore  Dockerfile  app.py  helpers.py  requirements.txt  style.css
recipe-weather-forecastic/notebooks/: data_pull.ipynb
recipe-weather-forecastic/src/recipe_weather_forecastic/: __main__.py  pipeline_registry.py  settings.py
recipe-weather-forecastic/src/recipe_weather_forecastic/datasets/: notebook_dataset.py
recipe-weather-forecastic/src/recipe_weather_forecastic/pipelines/data_wrangle/: nodes.py  pipeline.py
recipe-weather-forecastic/src/recipe_weather_forecastic/pipelines/delete_assets/: nodes.py  pipeline.py
recipe-weather-forecastic/src/recipe_weather_forecastic/pipelines/deploy_forecast/: nodes.py  pipeline.py
recipe-weather-forecastic/src/recipe_weather_forecastic/pipelines/deploy_streamlit_app/: nodes.py  pipeline.py
recipe-weather-forecastic/src/recipe_weather_forecastic/pipelines/setup/: nodes.py  pipeline.py
recipe-weather-forecastic/tests/: test_deployments.py
{{ cookiecutter.repo_name }}/: .gitignore  requirements.txt
{{ cookiecutter.repo_name }}/conf/base/: catalog.yml  parameters.yml
{{ cookiecutter.repo_name }}/notebooks/: data_pull.ipynb  launch_app.ipynb  preprocess.ipynb
(+25 files in other folders)
